create multi module maven - check jaxb dependencies later : omidashouri : 98.07.21